--- a/main.css
+++ b/main.css
@@ -6,8 +6,11 @@
 }
 .cont{
     width: 100%;
-    max-width: 1242px;
+    max-width: 1290px;
     margin: 0 auto;
+}
+*::-webkit-scrollbar{
+    display: none;
 }
 #head{
     display: flex;
@@ -61,59 +64,48 @@
 }
 
 /* sc movie */
-.movies-section{
+#m-cont{
+    
+}
+.m-secs{
     margin: 41px 0;
 }
-.movie-section-heading{
+.m-sec-heading{
     font-size: 20px;
     font-weight: 700;
     line-height: 1.2;
     color: white;
-    cursor: pointer;
     margin-bottom: 10px;
+    cursor: pointer;
 }
-.explore-nudge{
+.exp-nudge{
     color: #54b9c5;
-    font-size: 12px;
+    font-size: 14px;
     display: none;
 }
-.movie-section-heading:hover .explore-nudge{
+.m-sec-heading:hover .exp-nudge{
     display: inline-block;
 }
-.movies-row{
+
+.m-row{
     display: flex;
     flex-direction: row;
     align-items: center;
     flex-wrap: nowrap;
-    overflow-x:auto;
-    overflow-y: hidden;
+    overflow-x: auto;
+    overflow-y: auto;
 }
-.movie-item{
+.m-item{
     width: 245px;
     object-fit: contain;
     margin-right: 6px;
-    border-radius: 4px;
-    position: relative;
+    border-radius: 5px;
 }
-.move-item-img{
+.m-item:hover{
+    transform: scale(1.4);
+    transition: transform linear 700ms;
+}
+.m-i-img{
+    /* max-width: 10vi; */
     width: inherit;
 }
-.movie-item .iframe-wrap{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
-    display: none;
-    border: none;
-    outline: none;
-}
-.movie-item:hover .iframe-wrap{
-    display: block;
-}
-.movie-item:hover{
-    transform: scale(1.3);
-    transition: transform linear 300ms;
-}
-
