--- a/homepage/home.css
+++ b/homepage/home.css
@@ -1,3 +1,6 @@
+*{
+    letter-spacing: 0!important;
+}
 html{
     letter-spacing: 0!important;
     -webkit-text-size-adjust: 100%;
@@ -210,8 +213,162 @@ img{
     left: 0;
 }
 
+/* main sec1 sub2 */
+.ms1-sub2{
+    margin: auto;
+    max-width: calc(100% - 3rem);
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    text-align: center;
+}
+.ms-eml{
+    -webkit-flex-basis: 50%;
+    -ms-flex-preferred-size: 50%;
+    flex-basis: 50%;
+    padding: 0;
+    z-index: 1;
+    width: 100%;
+}
+.ms-eml>h1{
+    margin: 0;
+}
+.ms-eml>p{
+    margin: 1rem 0 0;
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+.em-i-c{
+    margin: 1.5rem 0 0;
+    text-align: center;
+    box-sizing: border-box;
+    max-width: 61.5rem;
+    margin: 0 auto;
+    padding: 0 1.5rem;
+    content: '1';
 
+}
+.em-i-c>form>h3{
+    margin: 0;
+    font-size: 1.25rem;
+    font-weight: 400;
+    line-height: 1.875rem;
+}
+.em-form{
+    text-align: left;
+    position: relative;
+    margin: 1rem auto 0;
+    width: 100%;
+    max-width: 36.625rem;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
 
+}
+.em-f1{
+    position: relative;
+    display: inline-flex;
+    flex-wrap: wrap;
+    vertical-align: text-top;
+}
+.em-f1>label{
+    position: absolute;
+    z-index: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    transition-property: top, font-size, line-height;
+    transition-duration: 250ms;
+    pointer-events: none;
+    font-size: 1rem;
+    transition-timing-function: cubic-bezier(0.9, 0, 0.51, 1);
+    color: rgba(255, 255, 255, 0.7);
+    line-height: 1.5rem;
+    left: 1rem;
+    right: 1rem;
+    top: 1rem;
+}
+.em-f2{
+    fill: currentcolor;
+    font-size: 1rem;
+    font-weight: 400;
+    min-width: 12.5rem;
+    padding: 0px;
+    width: 100%;
+    color: rgb(255, 255, 255);
+}
+.em-f2>input{
+    transition: color 250ms cubic-bezier(0.5, 0, 0.1, 1) 0s;
+    width: 100%;
+    color: transparent;
+    line-height: 1.5rem;
+    padding: 1.5rem 1rem 0.5rem;
+    min-height: 16px;
+    min-width: 16px;
+}
+.em-form input~ .frm-in{
+
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 0.25rem;
+    background: rgba(22, 22, 22, 0.7);
+    border-color: rgba(128, 128, 128, 0.7);
+}
+.frm-in{
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 0.25rem;
+    background: rgba(22, 22, 22, 0.7);
+    border-color: rgba(128, 128, 128, 0.7);
+}
+
+/* submit button */
+.sumbut{
+    appearance: none;
+    font-style: inherit;
+    font-variant: inherit;
+    font-stretch: inherit;
+    font-family: inherit;
+    font-optical-sizing: inherit;
+    font-kerning: inherit;
+    font-feature-settings: inherit;
+    font-variation-settings: inherit;
+    margin: 0px;
+    text-decoration: none;
+    -webkit-box-align: center;
+    align-items: center;
+    box-sizing: border-box;
+    display: inline-flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    letter-spacing: normal;
+    line-height: 1;
+    user-select: none;
+    border: 0px;
+    border-radius: 0.25rem;
+    cursor: pointer;
+    fill: currentcolor;
+    position: relative;
+    transition-duration: 250ms;
+    transition-property: background-color, border-color;
+    transition-timing-function: cubic-bezier(0.9, 0, 0.51, 1);
+    vertical-align: text-top;
+    width: auto;
+    font-size: 1.5rem;
+    font-weight: 500;
+    min-height: 3.5rem;
+    padding: 0.75rem 1.5rem;
+    background: rgb(229, 9, 20);
+    color: rgb(255, 255, 255);
+}
 /* divider */
 .g-div{
     width: 100%;
@@ -226,5 +383,25 @@ img{
     .ms-1{
         min-height: 43.75rem;
         padding: 9.875rem 0 4rem;
+    }
+    .ms1-sub2{
+        flex-direction: column;
+    }
+    .ms-eml>h1{
+        font-size: 3rem;
+        font-weight: 900;
+    }
+    .ms-eml>p{
+        font-size: 1.5rem;
+        font-weight: 400;
+    }
+    .em-i-c{
+        content: '2';
+        padding: 0 2rem;
+    }
+}
+@media screen and(min-width:1280px) {
+    .ms1-sub2{
+        max-width: calc( 83.33333333333334% - 6rem );
     }
 }
