--- a/homepage/home.css
+++ b/homepage/home.css
@@ -271,6 +271,27 @@ img{
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    /*  */
+    text-align: left;
+    /* position: relative; */
+    margin: 1rem auto 0;
+    width: 100%;
+    max-width: 36.625rem;
+    /* display: -webkit-box; */
+    /* display: -webkit-flex; */
+    display: -ms-flexbox;
+    /* display: flex; */
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    /*  */
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    -webkit-box-align: center;
 
 }
 .em-f1{
